# Bella_Napoli

./: README.md  chunk_big_pizza.py  dockerfile  gradio_pizza.py  main.py  pyproject.toml  rag_langchain.py
data/chroma_db/: chroma.sqlite3
data/json/: allergene.json
